--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This api make only useing todo applicatopn",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -14,13 +15,17 @@
     "todo",
     "application"
   ],
-  "author": "Forhadul Islam",
+  "author": {
+    "name": "Forhadul Islam",
+    "email": "mdforhadul44@gmail.com"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mdforhadulislam/todo_api/issues"
   },
   "homepage": "https://github.com/mdforhadulislam/todo_api#readme",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.6",
     "nodemon": "^2.0.19"
