--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 DB_URL=mongodb+srv://forhad:rafsamforhad4401@cluster0.hmurewc.mongodb.net/?retryWrites=true&w=majority
+SECRET=DTUqIGwBsswUFDJJqdV 
